style(browser-repl): fix overflow-x

--- a/packages/browser-repl/src/components/utils/line-with-icon.less
+++ b/packages/browser-repl/src/components/utils/line-with-icon.less
@@ -13,5 +13,6 @@
 
   &-content {
     flex: 1;
+    overflow-x: auto;
   }
 }
